force-app/main/default/objects/Guest__c/Guest__c.object-meta.xml
<CustomObject>
    <description>Used to add Guests to the CEC Visitation Planner</description>
    <label>Guest</label>
    <nameField>
        <displayFormat>G-{00000}</displayFormat>
        <label>Guest Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>