force-app/main/default/objects/Guest__c/fields/Airfare_Cost_1__c.field-meta.xml
<CustomField>
    <fullName>Airfare_Cost_1__c</fullName>
    <description>Total Cost for Airfare</description>
    <inlineHelpText>Total Cost for Airfare</inlineHelpText>
    <label>Airfare</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>