force-app/main/default/objects/Guest__c/fields/Attendee_Name_C__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Name_C__c</fullName>
    <description>Full Name as it Appears on Government Issued ID</description>
    <inlineHelpText>Full Name as it Appears on Government Issued ID:
Example:  Thomas Joseph Williams</inlineHelpText>
    <label>Attendee Legal Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>