force-app/main/default/objects/Guest__c/fields/Attendee_Type__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Type__c</fullName>
    <label>Attendee Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hillrom Personnel</fullName>
                <color>#0B6FCE</color>
                <label>Hillrom Personnel</label>
            </value>
            <value>
                <fullName>Medical Professional / Nurse</fullName>
                <color>#78C953</color>
                <label>Medical Professional / Nurse</label>
            </value>
            <value>
                <fullName>Non Medical Customer / Guest</fullName>
                <color>#E27001</color>
                <label>Non Medical Customer / Guest</label>
            </value>
            <value>
                <fullName>Distributor / Business Partner</fullName>
                <color>#A845DC</color>
                <label>Distributor / Business Partner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>