force-app/main/default/objects/Guest__c/fields/Breakfast__c.field-meta.xml
<CustomField>
    <fullName>Breakfast__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Participant will attend Breakfast</description>
    <inlineHelpText>Participant will attend Breakfast</inlineHelpText>
    <label>Breakfast</label>
    <type>Checkbox</type>
</CustomField>