force-app/main/default/objects/Guest__c/fields/Breakfast_Days__c.field-meta.xml
<CustomField>
    <fullName>Breakfast_Days__c</fullName>
    <description>Number of Days Attending Breakfast</description>
    <inlineHelpText>Number of Days Attending Breakfast</inlineHelpText>
    <label>Breakfast Days</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Breakfast__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>