force-app/main/default/objects/Guest__c/fields/Breakfast_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Breakfast_Total_Cost__c</fullName>
    <description>Total Cost for Breakfast</description>
    <inlineHelpText>Total Cost for Breakfast</inlineHelpText>
    <label>Breakfast Cost</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>