force-app/main/default/objects/Guest__c/fields/CEC_Badge_Name__c.field-meta.xml
<CustomField>
    <fullName>CEC_Badge_Name__c</fullName>
    <description>Name Requested for ID Badge</description>
    <inlineHelpText>Name Requested for ID Badge:
Example: Tom Williams</inlineHelpText>
    <label>CEC Badge Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>