force-app/main/default/objects/Guest__c/fields/CEC_Visitation_Planner__c.field-meta.xml
<CustomField>
    <fullName>CEC_Visitation_Planner__c</fullName>
    <label>CEC Visitation Planner</label>
    <referenceTo>Trip__c</referenceTo>
    <relationshipLabel>Guests</relationshipLabel>
    <relationshipName>Guests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>