force-app/main/default/objects/Guest__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Name of Attending Person. If person does not exist add as a New Contact</description>
    <inlineHelpText>Name of Attending Person. If person does not exist add as a New Contact</inlineHelpText>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Guests</relationshipLabel>
    <relationshipName>Guests</relationshipName>
    <type>Lookup</type>
</CustomField>