force-app/main/default/objects/Guest__c/fields/Customer_Guest__c.field-meta.xml
<CustomField>
    <fullName>Customer_Guest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Participant is a Customer</description>
    <inlineHelpText>Participant is a Customer</inlineHelpText>
    <label>Customer/Guest</label>
    <type>Checkbox</type>
</CustomField>