force-app/main/default/objects/Guest__c/fields/Dinner__c.field-meta.xml
<CustomField>
    <fullName>Dinner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Participant will Attend Dinner</description>
    <inlineHelpText>Participant will Attend Dinner</inlineHelpText>
    <label>Dinner</label>
    <type>Checkbox</type>
</CustomField>