force-app/main/default/objects/Guest__c/fields/Dinner_Cost__c.field-meta.xml
<CustomField>
    <fullName>Dinner_Cost__c</fullName>
    <description>Total Cost for Dinner</description>
    <inlineHelpText>Total Cost for Dinner</inlineHelpText>
    <label>Dinner Cost</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>