force-app/main/default/objects/Guest__c/fields/Distributor_Business_Partner__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Business_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Participant is a Distributor/Business Partner</description>
    <inlineHelpText>Participant is a Distributor/Business Partner</inlineHelpText>
    <label>Distributor/Business Partner</label>
    <type>Checkbox</type>
</CustomField>