force-app/main/default/objects/Guest__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <description>Required for Air Travel Only: Attendee Date of Birth</description>
    <inlineHelpText>Required for Air Travel Only: Attendee Date of Birth</inlineHelpText>
    <label>DOB (Air Travel Only)</label>
    <type>Date</type>
</CustomField>