force-app/main/default/objects/Guest__c/fields/Entertainment_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Entertainment_Total_Cost__c</fullName>
    <description>Total Cost for Entertainment</description>
    <inlineHelpText>Total Cost for Entertainment</inlineHelpText>
    <label>Entertainment Cost</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>