force-app/main/default/objects/Guest__c/fields/Ground_Transportation_Needed__c.field-meta.xml
<CustomField>
    <fullName>Ground_Transportation_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CEC Guest needs ground transportation.</description>
    <inlineHelpText>CEC Guest needs ground transportation.</inlineHelpText>
    <label>Ground Transportation Needed</label>
    <type>Checkbox</type>
</CustomField>