force-app/main/default/objects/Guest__c/fields/Ground_Transportation_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Ground_Transportation_Total_Cost__c</fullName>
    <description>Total Cost For Ground Transportation</description>
    <inlineHelpText>Total Cost For Ground Transportation</inlineHelpText>
    <label>Ground Transportation</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>