force-app/main/default/objects/Guest__c/fields/Hill_Rom_Personnel__c.field-meta.xml
<CustomField>
    <fullName>Hill_Rom_Personnel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Participant is a Hill-Rom Host or Support Personnel</description>
    <inlineHelpText>Participant is a Hill-Rom Host or Support Personnel</inlineHelpText>
    <label>Hill-Rom Personnel</label>
    <type>Checkbox</type>
</CustomField>