force-app/main/default/objects/Guest__c/fields/Last_Name_C__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_C__c</fullName>
    <description>Name as it Appears on Government Issued ID</description>
    <inlineHelpText>Name as it Appears on Government Issued ID</inlineHelpText>
    <label>Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>