force-app/main/default/objects/Guest__c/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <description>Attendee Type = Medical Professional / Nurse
Enter all Doctors State/Federal License #
Enter only Nurses State/Federal License # for (VT and MA)
All other Nurses Enter - NA</description>
    <inlineHelpText>Attendee Type = Medical Professional / Nurse
Enter all Doctors State/Federal License #
Enter only Nurses State/Federal License # for (VT and MA)
All other Nurses Enter - NA</inlineHelpText>
    <label>Medical License Number (Dr/Nurse Only)</label>
    <length>60</length>
    <type>Text</type>
</CustomField>