force-app/main/default/objects/Guest__c/fields/Lodging_Farm_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Lodging_Farm_Total_Cost__c</fullName>
    <description>Total Cost for Farm Lodging</description>
    <inlineHelpText>Total Cost for Farm Lodging</inlineHelpText>
    <label>Lodging Farm</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>