force-app/main/default/objects/Guest__c/fields/Lodging_Hotel_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Lodging_Hotel_Total_Cost__c</fullName>
    <description>Total Cost for Hotel Lodging</description>
    <inlineHelpText>Total Cost for Hotel Lodging</inlineHelpText>
    <label>Lodging Hotel</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>