force-app/main/default/objects/Guest__c/fields/Lunch__c.field-meta.xml
<CustomField>
    <fullName>Lunch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Participant will Attend Lunch</description>
    <inlineHelpText>Participant will Attend Lunch</inlineHelpText>
    <label>Lunch</label>
    <type>Checkbox</type>
</CustomField>