force-app/main/default/objects/Guest__c/fields/Lunch_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Total_Cost__c</fullName>
    <description>Total Cost for Lunch</description>
    <inlineHelpText>Total Cost for Lunch</inlineHelpText>
    <label>Lunch Cost</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>