force-app/main/default/objects/Guest__c/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <label>Middle Name / Initial</label>
    <length>40</length>
    <type>Text</type>
</CustomField>