force-app/main/default/objects/Guest__c/fields/Send_Survey__c.field-meta.xml
<CustomField>
    <fullName>Send_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to enable Qualtrics CEC Customer Survey</description>
    <inlineHelpText>Check to enable Qualtrics CEC Customer Survey</inlineHelpText>
    <label>Send Survey</label>
    <type>Checkbox</type>
</CustomField>