force-app/main/default/objects/Guest__c/fields/Snacks_Breaks_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Snacks_Breaks_Total_Cost__c</fullName>
    <description>Total Cost for Snacks/Breaks</description>
    <inlineHelpText>Total Cost for Snacks/Breaks</inlineHelpText>
    <label>Snacks/Breaks Cost</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>