force-app/main/default/objects/Guest__c/fields/Special_Requests__c.field-meta.xml
<CustomField>
    <fullName>Special_Requests__c</fullName>
    <label>Guest Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>