force-app/main/default/objects/Guest__c/fields/STAMP_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>STAMP_Account_Name__c</fullName>
    <description>STAMP Account Name Attendee is affiliated with.</description>
    <inlineHelpText>STAMP Account Name Attendee is affiliated with.</inlineHelpText>
    <label>STAMP Account Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>