force-app/main/default/objects/Guest__c/fields/STAMP_Attendee__c.field-meta.xml
<CustomField>
    <fullName>STAMP_Attendee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the Attendee part of a STAMP Clinical Solutions Education?</description>
    <inlineHelpText>Is the Attendee part of a STAMP Clinical Solutions Education?</inlineHelpText>
    <label>STAMP Attendee</label>
    <type>Checkbox</type>
</CustomField>