force-app/main/default/objects/Guest__c/fields/Trip_End_Date_Guest__c.field-meta.xml
<CustomField>
    <fullName>Trip_End_Date_Guest__c</fullName>
    <description>Trip End Date</description>
    <formula>CEC_Visitation_Planner__r.Trip_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Trip End Date</inlineHelpText>
    <label>Trip End Date</label>
    <type>Date</type>
</CustomField>