force-app/main/default/objects/Guest__c/fields/Trip_Start_Date_Guest__c.field-meta.xml
<CustomField>
    <fullName>Trip_Start_Date_Guest__c</fullName>
    <description>Trip Start Date</description>
    <formula>CEC_Visitation_Planner__r.Trip_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Trip Start Date</inlineHelpText>
    <label>Trip Start Date</label>
    <type>Date</type>
</CustomField>