force-app/main/default/objects/Guest__c/validationRules/DOB_Air_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>DOB_Air_Only</fullName>
    <active>true</active>
    <description>DOB is only required for Air Travel

and(date($ObjectType.Trip__c.Fields.RecordTypeId) = &apos;Opportunity Based Commercial Air&apos;, DOB_c = &apos;&apos;)</description>
    <errorConditionFormula>and (or( CEC_Visitation_Planner__r.RecordTypeId  = &apos;012M00000008qlw&apos;, CEC_Visitation_Planner__r.RecordTypeId  = &apos;012M00000008qlt&apos;), isblank(DOB__c))</errorConditionFormula>
    <errorDisplayField>DOB__c</errorDisplayField>
    <errorMessage>Enter DOB</errorMessage>
</ValidationRule>